--- a/package.json
+++ b/package.json
@@ -107,6 +107,7 @@
     "react-dom": "^16.13.1",
     "react-helmet": "^6.0.0",
     "react-hot-loader": "^4.12.21",
+    "react-markdown": "^4.3.1",
     "react-redux": "^7.2.0",
     "react-refresh": "^0.8.2",
     "react-router-dom": "^5.2.0",
